Left and Right containers now align correctly
Also, a background has been added to all the containers for testing
purposes, and the buttons have been renamed to fit below the canvas.

--- a/style.css
+++ b/style.css
@@ -8,17 +8,21 @@
     flex-wrap: wrap;
     width: 100%;
     justify-content: space-between;
+    background: grey;
 }
 
 #left-side {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
+    background: blue;
 }
 
 #right-side {
     display: flex;
     flex-wrap: wrap;
-
+    flex-direction: column;
+    background: red;
 }
 
 #canvas {
